--- a/.github/workflows/openwebif.yml
+++ b/.github/workflows/openwebif.yml
@@ -10,18 +10,34 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v2
         with:
           ref: 'master'
 
+      - name: install prerequisites
+        run: |
+          sudo apt-get -q update
+          sudo apt-get install automake
+          sudo apt-get install git
+          sudo apt-get install build-essential
+          sudo apt-get install gettext
+          sudo apt-get install python2-dev
+
       - uses: actions/setup-python@v2
         with:
-          python-version: '2.7'
+          python-version: '3.10'
 
-      - name: Build python 2.7
+      - name: compile python3
+        run: |
+          pip3 install Cheetah3
+          pip3 install six
+          python3 -m compileall .
+          cheetah compile -R plugin
+
+      - name: compile python2
         run: |
           sudo apt-get install -y closure-compiler nodejs npm gettext
           sudo npm install -g jshint
@@ -30,6 +46,9 @@ jobs:
           pip install bandit==1.6.2
           pip install six
           python -m compileall .
-          find . -type f -name "*.po" -exec msgfmt {} -o {}.mo \;
           cheetah compile -R plugin
+
+      - name: compile po files
+        run: |
+          find . -type f -name "*.po" -exec msgfmt {} -o {}.mo \;
           echo done!
