--- a/.github/workflows/openwebif.yml
+++ b/.github/workflows/openwebif.yml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get install git
           sudo apt-get install build-essential
           sudo apt-get install gettext
-          sudo apt-get install python2-dev
+          sudo apt-get install python2
 
       - uses: actions/setup-python@v2
         with:
